--- a/public/index.html
+++ b/public/index.html
@@ -448,6 +448,7 @@
     <div class="tab" data-tab="campaigns">Campaign Tracker</div>
     <div class="tab" data-tab="analytics">AI Analytics</div>
     <div class="tab" data-tab="scoring">How Scoring Works</div>
+    <div class="tab" data-tab="diagram">Diagram</div>
     <div class="tab" data-tab="methodology">How Engagement Works</div>
   </div>
 
@@ -617,6 +618,13 @@
       <div class="note-box">
         Scores are based on publicly available data (bios, follower counts, engagement). The AI doesn't see private analytics, sponsorship history, or content quality beyond what's in the description. Use scores as a starting point, not a final decision.
       </div>
+    </div>
+  </div>
+
+  <!-- Diagram Tab -->
+  <div id="tab-diagram" class="tab-content">
+    <div style="max-width:1200px; margin:32px auto; padding:0 32px; text-align:center;">
+      <img src="/diagram.jpg" alt="Diagram" style="max-width:100%; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
     </div>
   </div>
 
